--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less-middleware": "1.0.x",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0",
-    "socket.io": "^1.4.8"
+    "socket.io": "^1.4.8",
+    "twitter": "^1.4.0"
   }
 }
